AngleTypes.h split of from BasicTypes.h

--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AngleTypes.h" />
     <ClInclude Include="BasicTypes.h" />
   </ItemGroup>
   <ItemGroup>
