--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -107,5 +107,8 @@
     <ClCompile Include="AngleTypes.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="fHertz.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
