--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -111,9 +111,6 @@
     <ClInclude Include="SizeSelectionCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AddPipe2BaseKnotCmd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="AddPipe2PipeCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -213,6 +210,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DeleteSelectionCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AddPipe2BaseKnotCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
