Win32_NNetAppMenu.ixx

--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -606,7 +606,8 @@
     <ClCompile Include="Win32_MiniWindow.cpp" />
     <ClCompile Include="Win32_MiniWindow.ixx" />
     <ClCompile Include="win32_monitorWindow.cpp" />
-    <ClCompile Include="win32_NNetAppMenu.cpp" />
+    <ClCompile Include="Win32_NNetAppMenu.cpp" />
+    <ClCompile Include="Win32_NNetAppMenu.ixx" />
     <ClCompile Include="win32_NNetAppWindow.cpp" />
     <ClCompile Include="NNetController.cpp" />
     <ClCompile Include="NNetController.ixx" />
@@ -629,7 +630,6 @@
     <ClInclude Include="TimeGraph.h" />
     <ClInclude Include="win32_MainWindow.h" />
     <ClInclude Include="win32_monitorWindow.h" />
-    <ClInclude Include="win32_NNetAppMenu.h" />
     <ClInclude Include="win32_NNetAppWindow.h" />
     <ClInclude Include="win32_NNetWindow.h" />
   </ItemGroup>
