--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -110,5 +110,8 @@
     <ClCompile Include="fHertz.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SpeedType.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
