--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClInclude Include="DeleteSignalCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="InsertTrackCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="DiscIoConnectorCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -213,6 +210,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SelectionCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="InsertTrackCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
