--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -173,7 +173,6 @@
     <ClInclude Include="win32_hiResTimer.h" />
     <ClInclude Include="win32_rootWindow.h" />
     <ClInclude Include="win32_script.h" />
-    <ClInclude Include="win32_stopwatch.h" />
     <ClInclude Include="win32_textWindow.h" />
     <ClInclude Include="win32_textWindowThread.h" />
     <ClInclude Include="win32_util.h" />
@@ -206,6 +205,7 @@
     <ClCompile Include="Win32_Sound.ixx" />
     <ClCompile Include="Win32_StdDialogBox.cpp" />
     <ClCompile Include="Win32_StdDialogBox.ixx" />
+    <ClCompile Include="Win32_Stopwatch.ixx" />
     <ClCompile Include="win32_textBuffer.cpp" />
     <ClCompile Include="win32_hiResTimer.cpp" />
     <ClCompile Include="win32_rootWindow.cpp" />
