--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -15,9 +15,6 @@
     <ClInclude Include="Hertz.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Percent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TextBuffer.cpp">
@@ -117,6 +114,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SpeedType.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Percent.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
