--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -101,7 +101,6 @@
     <ClInclude Include="InsertBaseKnotCommand.h" />
     <ClInclude Include="RestrictSelectionCommand.h" />
     <ClInclude Include="RotateNobCommand.h" />
-    <ClInclude Include="SetNobCommand.h" />
     <ClInclude Include="SelectNobCommand.h" />
     <ClInclude Include="SelectSubtreeCommand.h" />
     <ClInclude Include="SetParameterCommand.h" />
@@ -152,6 +151,7 @@
     <ClCompile Include="SelectAllCommand.ixx" />
     <ClCompile Include="SelectionCommand.ixx" />
     <ClCompile Include="SelectNobsInRectCommand.ixx" />
+    <ClCompile Include="SetNobCommand.ixx" />
     <ClCompile Include="SizeSelectionCmd.ixx" />
     <ClCompile Include="SizeSensorCmd.ixx" />
     <ClCompile Include="SplitNeuronCmd.ixx" />
