--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClInclude Include="DiscIoConnectorCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SetNobCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="CommandFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -213,6 +210,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SizeSelectionCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SetNobCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
