--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClInclude Include="PlugIoLines.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SingleNobAnimation.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SetSigGenStaticDataCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -213,6 +210,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SetNobCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SIngleNobAnimation.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
