--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -167,7 +167,6 @@
     <ClInclude Include="win32_baseDialog.h" />
     <ClInclude Include="win32_baseWindow.h" />
     <ClInclude Include="win32_graphicsWindow.h" />
-    <ClInclude Include="win32_messagePump.h" />
     <ClInclude Include="win32_PixelTypes.h" />
     <ClInclude Include="win32_scale.h" />
     <ClInclude Include="win32_hiResTimer.h" />
@@ -200,7 +199,8 @@
     <ClCompile Include="Win32_event.ixx" />
     <ClCompile Include="Win32_FatalError.ixx" />
     <ClCompile Include="win32_graphicsWindow.cpp" />
-    <ClCompile Include="win32_messagePump.cpp" />
+    <ClCompile Include="Win32_MessagePump.cpp" />
+    <ClCompile Include="Win32_MessagePump.ixx" />
     <ClCompile Include="Win32_PIXEL.cpp" />
     <ClCompile Include="Win32_Sound.ixx" />
     <ClCompile Include="Win32_StdDialogBox.cpp" />
