--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -108,9 +108,6 @@
     <ClInclude Include="SelSigGenClientsCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SigGenCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="AttachSigGen2LineCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -213,6 +210,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SIngleNobAnimation.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SIgGenCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
