--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -15,6 +15,9 @@
     <ClInclude Include="Hertz.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VoltageType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TextBuffer.cpp">
