--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -70,7 +70,6 @@
     <ClInclude Include="AddPipe2PipeCommand.h" />
     <ClInclude Include="AddSensorSignalCmd.h" />
     <ClInclude Include="AddSigGen2MonitorCmd.h" />
-    <ClInclude Include="AnalyzeCommand.h" />
     <ClInclude Include="AttachSIgGen2ConnCmd.h" />
     <ClInclude Include="AttachSigGen2SelCmd.h" />
     <ClInclude Include="CommandFunctions.h" />
@@ -107,6 +106,7 @@
       <WholeProgramOptimization Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</WholeProgramOptimization>
     </ClCompile>
     <ClCompile Include="AddPipe2BaseKnotCommand.ixx" />
+    <ClCompile Include="AnalyzeCommand.ixx" />
     <ClCompile Include="ArrowAnimation.ixx">
       <ShowIncludes Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ShowIncludes>
     </ClCompile>
