--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -36,9 +36,6 @@
     <ClInclude Include="InsertBaseKnotCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AnalyzeCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="RestrictSelectionCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -213,6 +210,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SetSigGenStaticDataCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AnalyzeCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
