--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -164,7 +164,6 @@
     <ClInclude Include="Win32_PIXEL.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="win32_baseScale.h" />
-    <ClInclude Include="win32_baseDialog.h" />
     <ClInclude Include="win32_baseWindow.h" />
     <ClInclude Include="win32_graphicsWindow.h" />
     <ClInclude Include="win32_scale.h" />
@@ -182,10 +181,11 @@
     <ClCompile Include="Win32_ActionTimer.ixx" />
     <ClCompile Include="Win32_Animation.ixx" />
     <ClCompile Include="Win32_ArrowButton.ixx" />
+    <ClCompile Include="Win32_BaseDialog.ixx" />
     <ClCompile Include="Win32_BaseRefreshRate.ixx" />
     <ClCompile Include="win32_baseScale.cpp" />
     <ClCompile Include="Win32_Command.cpp" />
-    <ClCompile Include="win32_baseDialog.cpp" />
+    <ClCompile Include="Win32_BaseDialog.cpp" />
     <ClCompile Include="Win32_BaseRefreshRate.cpp" />
     <ClCompile Include="win32_baseWindow.cpp" />
     <ClCompile Include="Win32_Command.ixx" />
