--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="VoltageType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DrawContext.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TextBuffer.cpp">
