--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -576,7 +576,6 @@
   <ItemGroup>
     <ClCompile Include="ComputeThread.cpp" />
     <ClCompile Include="ComputeThread.ixx" />
-    <ClCompile Include="MainWindow.ixx" />
     <ClCompile Include="Measurement.cpp" />
     <ClCompile Include="Measurement.ixx" />
     <ClCompile Include="MomitorControl.ixx" />
@@ -606,6 +605,7 @@
     <ClCompile Include="Win32_DescriptionWindow.cpp" />
     <ClCompile Include="Win32_DescriptionWindow.ixx" />
     <ClCompile Include="Win32_MainWindow.cpp" />
+    <ClCompile Include="Win32_MainWindow.ixx" />
     <ClCompile Include="Win32_MiniWindow.cpp" />
     <ClCompile Include="Win32_MiniWindow.ixx" />
     <ClCompile Include="win32_monitorWindow.cpp" />
