--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -45,9 +45,6 @@
     <ClInclude Include="CommandFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RotateNobCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="RotateModelCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -213,6 +210,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DeleteSignalCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RotateNobCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
