--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -93,7 +93,6 @@
     <ClInclude Include="AttachSigGen2LineCmd.h" />
     <ClInclude Include="DiscIoConnectorCmd.h" />
     <ClInclude Include="RestrictSelectionCommand.h" />
-    <ClInclude Include="SelectNobCommand.h" />
     <ClInclude Include="SelectSubtreeCommand.h" />
     <ClInclude Include="SetParameterCommand.h" />
   </ItemGroup>
@@ -147,6 +146,7 @@
     <ClCompile Include="RotateNobCommand.ixx" />
     <ClCompile Include="SelectAllCommand.ixx" />
     <ClCompile Include="SelectionCommand.ixx" />
+    <ClCompile Include="SelectNobCommand.ixx" />
     <ClCompile Include="SelectNobsInRectCommand.ixx" />
     <ClCompile Include="SetNobCommand.ixx" />
     <ClCompile Include="SetSigGenStaticDataCmd.ixx" />
